fix: change slider styles in order to fix visibility issue on mobile devices

--- a/src/components/slider/slider.style.css
+++ b/src/components/slider/slider.style.css
@@ -22,6 +22,8 @@
 
 .info-content {
   flex-grow: 1;
+  height: 200px;
+  overflow-y: auto;
 }
 
 .info-section h2 {
@@ -115,8 +117,8 @@
 
 .media-container {
   position: relative;
+  aspect-ratio: 16 / 9;
   width: 100%;
-  height: 300px;
 }
 
 .media-placeholder {
@@ -153,9 +155,9 @@
   }
 
   .info-section {
-    width: 300px;
-    max-width: 300px;
-    min-width: 300px;
+    flex-basis: 300px;
+    flex-grow: 0;
+    flex-shrink: 0;
     order: -1;
     /* Move info section to the left on desktop */
   }
@@ -168,9 +170,10 @@
     padding: 20px;
   }
 
-  .media-container {
-    height: 100%;
+  .info-content {
+    max-height: none;
   }
+
 }
 
 html[dir="ltr"] .zoom-controls {
